# Tracely

./: AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  cliff.toml  deny.toml  justfile
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  doc-links.yml  flake-detection.yml  fr-coverage.yml  governance.yml  legacy-tooling-gate.yml  mutation.yml  quality-gate.yml  release.yml  sbom.yml  scorecard.yml  trufflehog.yml
crates/tracely-core/: Cargo.toml
crates/tracely-core/benches/: bench.rs
crates/tracely-core/fuzz/: Cargo.toml
crates/tracely-core/fuzz/fuzz_targets/: init_fuzz.rs
crates/tracely-sentinel/: Cargo.toml  rustfmt.toml
crates/tracely-sentinel/.github/workflows/: ci.yml  release.yml  security-deep-scan.yml  security-guard.yml  security.yml
crates/tracely-sentinel/benches/: perf.rs
crates/tracely-sentinel/docs/journeys/: index.md
crates/tracely-sentinel/docs/stories/: index.md
crates/tracely-sentinel/docs/traceability/: index.md
crates/tracely-sentinel/src/: circuit_breaker.rs  lib.rs  rate_limiter.rs  validation.rs
docs/: friction-log.md
docs/audit/: 100-PILLAR-AUDIT-REPORT.md
docs/journeys/manifests/: README.md  developer.md  platform-engineer.md  sre.md
docs/operations/: RUNBOOK.md  THREAT_MODEL.md
docs/security/: THREAT_MODEL.md
docs/worklogs/: README.md
