[package]
name = "phenotype-sentinel"
version = "0.2.0"
edition = "2021"
description = "Rate limiting, circuit breaker, bulkhead"
license = "MIT"
repository = "https://github.com/KooshaPari/sentinel"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }

[[bench]]
name = "perf"
harness = false
